corrected collection_checkboxes and labels alignment

--- a/app/assets/stylesheets/main.css
+++ b/app/assets/stylesheets/main.css
@@ -75,19 +75,8 @@
     color: white;
     padding: 5px 5px;
   }
-
-  input[type="checkbox"] {
-    display: inline-block;
-  }
-  
-  input[type="checkbox"] + label {
-    display: inline-block;
-    padding-right: 10px;
-    padding-left: 5px;
-  }
   
   a:link {
-  
   color: yellow;
   text-shadow:0 0 5px #fff;
   font-size: 25px;
